fixed text aligment on css. The scores and message results were off-centered.

--- a/style.css
+++ b/style.css
@@ -47,10 +47,21 @@ h2 {
 
 #cpuScore {
   margin-left: 55px;
-  font-size: 50px;
+  font-size: 70px;
+  height: 100px;
+  text-align: center;
+  width: 100px;
+  line-height: 100px;
+  vertical-align: middle;
 }
 #playerScore {
   margin-left: 20px;
+  font-size: 70px;
+  height: 100px;
+  text-align: center;
+  width: 100px;
+  line-height: 100px;
+  vertical-align: middle;
 }
 
 #messagelabel {
@@ -71,6 +82,8 @@ h2 {
   text-align: center;
   font-weight: bolder;
   font-size: 20px;
+  line-height: 60px;
+  vertical-align: middle;
 }
 
 .buttonReset {
